# flow-llm-router

./: .gitignore  README.md  flow_llm_router.yaml.example  flowgate.yaml.example  pyproject.toml
docs/: API_AND_OPERATIONS.md  ARCHITECTURE.md  DEVELOPMENT.md  SMART_ROUTER.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ModelPickerModal.tsx  VaultGate.tsx
frontend/src/lib/: api.ts  utils.ts
scripts/: build_frontend.sh  test_router_complexity_cases.py  test_router_save_no_token.py  test_service.py
src/flow_llm_router/: __init__.py  __main__.py  app.py  cli.py  config.py
src/flow_llm_router/analytics/: budget_doctor.py
src/flow_llm_router/api/: auth.py  caller_tokens.py  dashboard.py  keys.py  models.py  router_config.py  search.py
src/flow_llm_router/db/: engine.py  models.py
src/flow_llm_router/proxy/: router.py  schemas.py  streaming.py
src/flow_llm_router/security/: __init__.py  ip_guard.py  master_key_store.py  redact.py  vault.py
src/flow_llm_router/smart_router/: catalog_credentials.py  complexity.py  service.py
src/flowgate/: __init__.py  __main__.py  app.py  cli.py  config.py
src/flowgate/api/: auth.py  caller_tokens.py  dashboard.py  keys.py  models.py  router_config.py
src/flowgate/db/: engine.py  models.py
src/flowgate/proxy/: router.py  schemas.py  (+1 more)
tests/: conftest.py  test_analytics.py  test_api.py  test_app_autounlock.py  test_config.py  test_db.py  test_proxy.py  test_search_api.py  test_security.py  test_smart_router.py
(+17 files in other folders)
